# Urdf_Converter

./: .gitignore  CLAUDE.md  GIT_COMMIT_HISTORY.md  README.md  activate.sh  convert_collision_to_ifs.py  main.py  proto_editor_ui.py  pyproject.toml  pyrightconfig.json  requirements.txt  stl_tool.py  ui_picker.py
.agents/context/antigravity/: 1c6410eb-6ec2-4d49-9521-fa6ed446fafc.md  7ca7f536-c25a-457f-8dd5-5de05aadd535.md  80e9f96e-0ed6-4b8d-9601-e7b533610d71.md  sessions.json
docs/: DEVELOPMENT.md  ifs_converter.md  main_workflow.md  proto_editor.md  proto_parser.md  stl_tool.md
src/urdf_converter/: main.py
src/urdf_converter/core/: convert_collision_to_ifs.py  export_ifs.py  proto_parser.py
src/urdf_converter/ui/: file_picker.py  proto_editor_ui.py  stl_simplifier_viewer.py
src/urdf_converter/utils/: stl_tool.py  utils.py
